fixed weird spacing and responsive behaviour with flexbox

--- a/app/styles/app/components/build-tile.sass
+++ b/app/styles/app/components/build-tile.sass
@@ -20,7 +20,7 @@
 
 
 .build-tiles
-  height: 5.6rem
+  height: 4.7em
   margin: 0
   padding: 0
   clear: both
@@ -28,8 +28,8 @@
   li
     position: relative
     height: 100%
-    width: 20%
     float: left
+    width: 20%
     background-color: #F7F7F7
     border-right: 1px solid $white
     &:last-of-type
