--- a/app/styles/app/layouts/owner.sass
+++ b/app/styles/app/layouts/owner.sass
@@ -99,4 +99,4 @@
     & > div:nth-of-type(4)
       width: 15%
     & > div:nth-of-type(5)
-      width: 25%
+      width: 24%
